# lycee-app

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  build.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  idea.md  question.md
api/: .dockerignore  .env.example  Dockerfile  README.md  entrypoint.sh  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 886c73dc9e58_baseline_schema.py
api/app/: auth.py  avatars.py  badges.py  cli.py  config.py  db.py  discord.py  live_broadcast.py  main.py  models.py  quiz.py  state.py  time.py  topics.py
api/app/routers/: admin_router.py  ai_router.py  auth_router.py  bot_router.py  events_router.py  live_router.py  profile_router.py  questions_router.py  quiz_router.py  vote_router.py
api/app/wordlists/: banned_fr.txt  eff_fr.txt
api/tests/: conftest.py  test_admin_avatar_raw.py  test_app_startup.py  test_auth_require_admin.py  test_avatar_serving.py  test_live_answer.py  test_live_broadcast.py  test_live_scoring.py  test_live_state_machine.py  test_migrations.py  test_models_tz.py  test_pragmas.py  test_smoke.py  test_state.py  test_time.py
docs/: fenrirbot-lycee-cog-plan.md
docs/superpowers/plans/: 2026-06-06-db-interaction-layer.md  2026-06-07-correctness-fixes.md  2026-06-07-dedup-auth-livestate.md
docs/superpowers/specs/: 2026-06-06-db-interaction-layer-design.md
web/: .env.example  Dockerfile  astro.config.mjs  nginx.conf  package.json  tailwind.config.mjs
web/src/components/: AiPanel.tsx  AuthModal.tsx  LivePlayer.tsx  LiveStats.tsx  (+8 more)
(+30 files in other folders)
